# webhook-discord

./: Cargo.toml  README.md
src/: main.rs
